fix(bootstrap): Fix bootstrap buttons such that ng-disabled works again

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -52,6 +52,9 @@ clock-radius = 75
 		& > .control > .slider > .date-control > .days > .day-cell
 			line-height: 2.3rem
 			border-radius: 3px
+			text-decoration: none
+			&:hover
+				text-decoration: none
 			&.today
 				position: relative
 				&::after
