IE11 display problems with min-width initial

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -72,6 +72,7 @@ clock-radius = 75
 		.md-button
 			padding: 6px
 			margin: 0
+			min-width:auto
 			min-width: initial
 			line-height: inherit
 			font-size: inherit
@@ -226,7 +227,7 @@ clock-radius = 75
 					& > input
 						border: none
 						border-bottom: 1px solid black
-						text-align: right
+						text-align: center
 						font-size: 6.1rem
 						line-height: 3.0rem
 						width: 8.4rem
