--- a/src/styles.styl
+++ b/src/styles.styl
@@ -131,7 +131,7 @@ clock-radius = 75
 				width: 10%
 				cursor: pointer
 				padding: 0 0.6rem
-				& > i.fa
+				& > i.material-icons
 					&:first-child
 						margin-right 1.4rem
 					&:last-child
