--- a/src/material.jade
+++ b/src/material.jade
@@ -10,40 +10,40 @@
 		.slider 
 			.date-control
 				.title
-					md-button(ng-click="calendar._incMonth(-1)" aria-label="{{:: translations.previousMonth}}" style="float: left;" ng-class="{'visuallyhidden': calendar.isVisibleMonthButton('mindate')}")
+					md-button(ng-click="calendar._incMonth(-1)" aria-label="{{:: translations.previousMonth}}" style="float: left;" ng-class="{'visuallyhidden': calendar.isVisibleMonthButton('mindate')}" type="button")
 						i.fa.fa-caret-left
 					span.month-part {{date | date:'MMMM'}}
 						select(ng-model="calendar._month" ng-change="calendar.monthChange()" ng-options="calendar._allMonths.indexOf(month) as month for month in calendar._months")
 					input.year-part(ng-model="calendar._year" ng-change="calendar.yearChange()" type="number" min="{{restrictions.mindate ? restrictions.mindate.getFullYear() : 0}}" max="{{restrcitions.maxdate ? restrictions.maxdate.getFullYear() : NaN}}")
-					md-button(ng-click="calendar._incMonth(1)" aria-label="{{:: translations.nextMonth}}" style="float: right;" ng-class="{'visuallyhidden': calendar.isVisibleMonthButton('maxdate')}")
+					md-button(ng-click="calendar._incMonth(1)" aria-label="{{:: translations.nextMonth}}" style="float: right;" ng-class="{'visuallyhidden': calendar.isVisibleMonthButton('maxdate')}" type="button")
 						i.fa.fa-caret-right
 				.headers
 					.day-cell(ng-repeat="day in _weekdays track by $index") {{day}}
 				.days
 					each day in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31]
 						if day === 1
-							md-button.day-cell(ng-style="{'margin-left': calendar.offsetMargin()}" ng-class= "calendar.class("+day+")" ng-disabled="calendar.isDisabled("+day+")" ng-show="calendar.isVisible("+day+")" ng-click="calendar.select("+day+")" aria-label=day)= day
+							md-button.day-cell(ng-style="{'margin-left': calendar.offsetMargin()}" ng-class= "calendar.class("+day+")" ng-disabled="calendar.isDisabled("+day+")" ng-show="calendar.isVisible("+day+")" ng-click="calendar.select("+day+")" type="button" aria-label=day)= day
 						else
-							md-button.day-cell(ng-class= "calendar.class("+day+")" ng-show="calendar.isVisible("+day+")" ng-disabled="calendar.isDisabled("+day+")" ng-click="calendar.select("+day+")" aria-label=day)= day
-			md-button.switch-control(ng-click="modeSwitch()" aria-label="{{modeSwitchText()}}")
+							md-button.day-cell(ng-class= "calendar.class("+day+")" ng-show="calendar.isVisible("+day+")" ng-disabled="calendar.isDisabled("+day+")" ng-click="calendar.select("+day+")" type="button" aria-label=day)= day
+			md-button.switch-control(ng-click="modeSwitch()" aria-label="{{modeSwitchText()}}" type="button")
 				i.fa.fa-clock-o
 				i.fa.fa-calendar
 				span.visuallyhidden {{modeSwitchText()}}
 			.time-control
 				.time-inputs
 					input(type="number" min="{{_hours24 ? 0 : 1}}" max="{{_hours24 ? 23 : 12}}" ng-model="clock._hours")
-					md-button.hours.up(ng-click="clock._incHours(1)" aria-label="{{:: translations.incrementHours}}")
+					md-button.hours.up(ng-click="clock._incHours(1)" aria-label="{{:: translations.incrementHours}}" type="button")
 						i.fa.fa-caret-up
-					md-button.hours.down(ng-click="clock._incHours(-1)" aria-label="{{:: translations.decrementHours}}")
+					md-button.hours.down(ng-click="clock._incHours(-1)" aria-label="{{:: translations.decrementHours}}" type="button")
 						i.fa.fa-caret-down
 					input(type="number" min="0" max="59" ng-model="clock._minutes")
-					md-button.minutes.up(ng-click="clock._incMinutes(1)" aria-label="{{:: translations.incrementMinutes}}")
+					md-button.minutes.up(ng-click="clock._incMinutes(1)" aria-label="{{:: translations.incrementMinutes}}" type="button")
 						i.fa.fa-caret-up
-					md-button.minutes.down(ng-click="clock._incMinutes(-1)" aria-label="{{:: translations.decrementMinutes}}")
+					md-button.minutes.down(ng-click="clock._incMinutes(-1)" aria-label="{{:: translations.decrementMinutes}}" type="button")
 						i.fa.fa-caret-down
 				.buttons(ng-if="!_hours24")
-					md-button(ng-click="clock.setAM()" aria-label="{{:: translations.switchAmPm}}") {{date | date:'a'}}
+					md-button(ng-click="clock.setAM()" aria-label="{{:: translations.switchAmPm}}" type="button") {{date | date:'a'}}
 	.buttons
-		md-button(ng-click="setNow()" aria-label="{{:: translations.now}}") {{:: translations.now}}
-		md-button(ng-click="cancel()" ng-if="!autosave" aria-label="{{:: translations.cancel}}") {{:: translations.cancel}}
-		md-button(ng-click="save()" ng-if="!autosave" aria-label="{{:: translations.save}}") {{:: translations.save}}
+		md-button(ng-click="setNow()" aria-label="{{:: translations.now}}" type="button") {{:: translations.now}}
+		md-button(ng-click="cancel()" ng-if="!autosave" aria-label="{{:: translations.cancel}}" type="button") {{:: translations.cancel}}
+		md-button(ng-click="save()" ng-if="!autosave" aria-label="{{:: translations.save}}" type="button") {{:: translations.save}}
