feat: render minutes with two digits
When the time had minutes < 10, the clock would render the minutes as a single digit (ex: 10 : 9).  This fix updates the clock to always render the minutes with two digits (ex: 10 : 09).

--- a/src/bootstrap.jade
+++ b/src/bootstrap.jade
@@ -36,7 +36,7 @@
 						i.fa.fa-caret-up
 					button.btn.btn-link.hours.down(type="button" ng-click="clock._incHours(-1)")
 						i.fa.fa-caret-down
-					input(type="number" min="0" max="59" ng-model="clock._minutes")
+					input(type="text" ng-model="clock._minutesString")
 					button.btn.btn-link.minutes.up(type="button" ng-click="clock._incMinutes(1)")
 						i.fa.fa-caret-up
 					button.btn.btn-link.minutes.down(type="button" ng-click="clock._incMinutes(-1)")
